<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SEMOv1</string>
    <string name="salir_string">Salir</string>
    <string name="login_string">Inicio de Sesión</string>
    <string name="usuario_string">Usuario</string>
    <string name="contrasenia_string">Contraseña</string>
    <string name="iniciarSesionString">Iniciar Sesión</string>
    <string name="title_activity_main_alumno">Alumno</string>
    <string name="title_activity_main_docente">Docente</string>
    <string name="title_activity_main_administrador">Administrador</string>
    <string name="administrarCuentaLabel">Administrar Cuenta</string>
    <string name="verNotasLabel">Ver Notas</string>
    <string name="cerrarSesionLabel">Cerrar Sesión</string>
    <string name="buscarCursoLabel">Buscar Curso</string>
    <string name="hello_world">Hello World</string>
    <string name="mostrarListaLabel">Lista de Cursos</string>
    <string name="title_activity_listar_cursos">Listar Cursos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_administrar_cuenta">Administrar Cuenta</string>
    <string name="title_activity_ver_notas">Ver Notas</string>
    <string name="administrarCuentaslabel">Administrar Usuarios</string>
    <string name="crearCuentaLabel">Crear Cuenta</string>
    <string name="title_activity_crear_cuenta">Crear Cuenta</string>
    <string name="nombreUsuario_CrearCuentaActivity">Escribe el nombre de usuario</string>
    <string name="contrasenia_CrearCuentaActivity">Escribe la contraseña</string>
    <string name="repetirContrasenia_CrearCuentaActivity">Repite la contraseña</string>
    <string name="tipoCuentaLabel">Elige el tipo de cuenta</string>
    <string name="tipoAlumno">Alumno</string>
    <string name="tipoDocente">Docente</string>
    <string name="tipoAdministrador">Administrador</string>
    <string name="eligeTipoCuenta">Elige el tipo de cuenta:</string>
    <string name="crearBoton">Crear Usuario</string>
    <string name="actualizarCuenta">Actualizar Cuenta</string>
    <string name="title_activity_actualizar_cuenta">Actualizar Cuenta</string>
    <string name="administrarDocentesLabel">Administrar Docentes</string>
    <string name="administrarCiclosLabel">Administrar Ciclo</string>
    <string name="title_activity_administrar_docentes">Administrar Docentes</string>
    <string name="buscarDocenteLabel">Buscar Docente</string>
    <string name="agregarDocenteLabel">Agregar Docente</string>
    <string name="modificarDocenteLabel">Actualizar Docente</string>
    <string name="verDocentesLabel">Ver Lista Docentes</string>
    <string name="borrarDocentesLabel">Eliminar Docente</string>
    <string name="title_activity_administrar_ciclo">Administar Ciclos</string>
    <string name="buscarCicloLabel">Buscar Ciclo</string>
    <string name="agregarCicloLabel">Agregar Ciclo</string>
    <string name="modificarCicloLabel">Abrir/Cerrar Ciclo</string>
    <string name="verCicloLabel">Ver Lista Ciclo</string>
    <string name="borrarCicloLabel">Eliminar Ciclo</string>
    <string name="title_activity_agregar_ciclo">Agregar Ciclo</string>
    <string name="anio_ciclo">Año</string>
    <string name="ciclo_1o2">Ciclo</string>
    <string name="boton_add_ciclo">Agregar</string>
    <string name="title_activity_listar_ciclos">Listar Ciclos</string>
    <string name="title_activity_borrar_ciclos">Borrar Ciclos</string>
    <string name="llenarBaseLabel">Llenar Base de Datos</string>
    <string name="title_activity_agregar_docente">Agregar Docente</string>
    <string name="codDocenteLabel">Codigo del Docente</string>
    <string name="nombreDocenteLabel">Nombre del Docente</string>
    <string name="apellidoDocenteLabel">Apellido del Docente</string>
    <string name="crearDocenteBoton">Crear Docente</string>
    <string name="limpiarForm">Limpiar campos</string>
    <string name="title_activity_modificar_docente">Modificar Docente</string>
    <string name="seleccionarDocente">Seleccione un Docente</string>
    <string name="actualizarDocente">Actualizar Docente</string>
    <string name="title_activity_eliminar_docente">EliminarDocente</string>
    <string name="eliminarDocenteButton">Eliminar Docente</string>
    <string name="title_activity_listar_docentes">ListarDocentes</string>
    <string name="eliminarCicloContext">Eliminar</string>
    <string name="activarCiclo">Activar/Desactivar</string>

</resources>
