<menu xmlns:android="http://schemas.android.com/apk/res/android" >

     <item android:id="@+id/buscarItem" 
        android:orderInCategory="100" 
        android:title="@string/buscarDocenteLabel" 
        android:showAsAction="ifRoom" 
        android:icon="@drawable/ic_action_search"
        android:actionViewClass="android.widget.SearchView">
    </item>
    <item 
        android:id="@+id/agregarDocenteItem" 
        android:orderInCategory="100" 
        android:title="@string/agregarDocenteLabel" 
        android:showAsAction="ifRoom" 
        android:icon="@drawable/ic_action_new">
    </item>
    <item 
        android:id="@+id/modificarDocenteItem"
        android:orderInCategory="100" 
        android:title="@string/modificarDocenteLabel" 
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_edit"></item>
    <item
        android:id="@+id/verDocentesItem"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/verDocentesLabel"
        android:icon="@drawable/lista_ic"/>
    <item
        android:id="@+id/borrarDocentesItem"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/borrarDocentesLabel"
        android:icon="@drawable/ic_action_cancel"/>
    <item
        android:id="@+id/cerrarSesionItem"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/cerrarSesionLabel"/>

</menu>