<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <item
        android:id="@+id/administrar_cuentas"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/administrarCuentaslabel"
         android:icon="@drawable/gear">
        <menu>
            <item android:id="@+id/crear_cuenta"
                  android:showAsAction="never"
                  android:title="@string/crearCuentaLabel"/>
            <item android:id="@+id/actualizar_cuenta" android:title="@string/actualizarCuenta"/>
        </menu>
    </item>
    <item android:id="@+id/cerrar_sesion" 
          android:orderInCategory="100" 
          android:showAsAction="never" 
          android:title="@string/cerrarSesionLabel" />

</menu>
