<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/buscarItem" 
        android:orderInCategory="100" 
        android:title="@string/buscarCicloLabel" 
        android:showAsAction="ifRoom" 
        android:icon="@drawable/ic_action_search"
        android:actionViewClass="android.widget.SearchView">
    </item>
    <item 
        android:id="@+id/agregarCicloItem" 
        android:orderInCategory="100" 
        android:title="@string/agregarCicloLabel" 
        android:showAsAction="ifRoom" 
        android:icon="@drawable/ic_action_new">
    </item>
    <item
        android:id="@+id/verCicloItem"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/verCicloLabel"
        android:icon="@drawable/lista_ic"/>
    <item
        android:id="@+id/cerrarSesionItem"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/cerrarSesionLabel"/>

</menu>
