<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto" >
    <item 
        android:id="@+id/listaCursosItem" 
        android:orderInCategory="100" 
        android:title="@string/mostrarListaLabel" 
        android:showAsAction="ifRoom|withText" 
        android:icon="@drawable/lista_ic">
    </item>
    <item 
        android:id="@+id/administrarCuentaItem"
        android:orderInCategory="100" 
        android:title="@string/administrarCuentaLabel" 
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/gear"></item>
    <item
        android:id="@+id/cerrarSesionItem"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/cerrarSesionLabel"/>
    
</menu>
