<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="301dp" >
        
        <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="76dp"
                android:drawableLeft="@drawable/user_ic"
                android:ems="10"
                android:hint="@string/usuario_string"
                android:layout_centerHorizontal="true" />

		    <EditText
		        android:id="@+id/editText2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
		        android:layout_below="@+id/editText1"
		        android:layout_marginTop="14dp"
		        android:drawableLeft="@drawable/pass_ic"
		        android:ems="10"
		        android:hint="@string/contrasenia_string"
		        android:inputType="textPassword" />


		    <Button
		        android:id="@+id/button1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:text="@string/iniciarSesionString"
		        android:layout_marginTop="215dp"
		        android:onClick="Ingresar" />

		    <ProgressBar
		        android:id="@+id/progressBar1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/editText2"
		        android:layout_centerHorizontal="true"
		        android:visibility="invisible" />

    </RelativeLayout>

</ScrollView>